--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,12 @@
  *= require_self
  *= require_tree .
  */
+
+.errorExplanation {
+	background-color: red;
+	color: #FFF;
+}
+
+.field_with_errors label {
+	color: red;
+}
