--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+	<% flash.each do |name, msg| %>
+	<!-- flash message for twitter bootstrap -->
+	<div class="alert alert -<%= name == :notice ? "success" : "error" %>">
+		<a class="close" data-dismiss="alert">&#215;</a>
+		<%= content_tag :div, msg, :id => "flash_%{name}" %>
+	</div>
+<%end%>
+
 <%= yield %>
 
 </body>
